--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -13,8 +13,7 @@ jobs:
           pip install sphinx sphinx_rtd_theme
       - name: Sphinx build
         run: |
-          conda init powershell
-          conda activate coderefinery
+          source activate ~/Miniconda3/envs/coderefinery
           sphinx-build doc _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
