--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -14,6 +14,7 @@ jobs:
       - name: Sphinx build
         run: |
           source ~/.bashrc
+          conda activate coderefinery
           sphinx-build doc _build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
